--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 							LANGUAGE
 						</h3>
 						<p>
-							C && Python
+							C && Python && AI
 						</p>
 						<p id="git">
 							<a href="https://github.com/blingblin-g" target="_blank"> github </a>
