[Add] info interest

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,13 @@
 							LANGUAGE
 						</h3>
 						<p>
-							C && Python && AI
+							C && Python
+						</p>
+						<h3>
+							INTEREST
+						</h3>
+						<p>
+							AI
 						</p>
 						<p id="git">
 							<a href="https://github.com/blingblin-g" target="_blank"> github </a>
